<resources>
    <string name="app_name">Task Manager</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="Description">Description</string>
    <string name="helperTextForTitle">Please inter Title of Task</string>
    <string name="helperTextOfDescription">Please inter Description of Task</string>
    <string name="submitTask">Add Task</string>
    <string name="setDoTime">Set Do Time</string>
    <string name="setDoDate">Set Do Date</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
